* Made the duplicate game dialog suppressable for the duration of a refresh
* Made archive and game lists resizeable
* Fixed window controls not being translateable
* Added a delete archive(s) button
* Fixed games dissapearing from the game list after a restore
* Fixed the monitor not restarting after a restore

=1.0 - Back to Alpha=
* All e-mails sent via MailSystem.NET (http://mailsystem.codeplex.com/)
* Changed XML format to conform with the GameSave.Info 2.0 spec, but here are dome format change highlights:
* Added environment_variable attribute to location_shortcut tag so that shortcuts in other locations can be specified
* Added new append attribute to ps_code tag to allow dividing up collections that share the same ps code
* Added new type attribute to ps_code tag to allow sorting playstation saves into types
* Added new location_scummvm tag to detect games based on ScummVM's ini file
* Added new android platform for saves that are detected on attached android devices
* Added new linkable tag to denote what folders are and aren't linkable
* Added new EV: CommonApplicationData
* Changed backup behavior so that files from different roots go in different archives. These seperate archives are identified by a hash of the original file's root path.
* Changed game data files to be in Common app data folder, so that you don't have to be admin to update/add games
* Added the ability to add a manual custom game
* Added the ability to symlink games (replaces old sync system)
* Removed task scheduler. The monitor is being beefed up to take it's place.
* Changed analyzer to work in tandem with custom games
* Single user and all user mode now share the same per-user config files
* Re-wrote interface. Again.

=0.9.2 - Portable Evolution=
* Fixed a bug when restoring to a game in an Alt. Install Path
* Changed Steam EV to have priority over program files EV
* Change to remove old location handler when resetting the handler

=0.9.1 - Independent Evolution=